spec/.test/config/invalid/factories.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => 1,
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
];
